src/components/rich-text-edit/adapter/vue-froala.scss
@import 'abstracts/variables';

.vue-froala {
    // margin-top: 5px;

    /deep/ .fr-box.fr-basic.fr-top .fr-wrapper {
        box-shadow: unset;
    }

    /deep/ .fr-wrapper {
        background-color: transparent;
    }

    /deep/ .fr-toolbar {
        opacity: 0;
        display: block !important;
        position: relative;
        box-shadow: unset;
        // border-top: 0;
        border-left: 1px solid $m-color--grey-light;
        border-right: 1px solid $m-color--grey-light;
        border-top: 1px solid $m-color--grey-light;
        border-bottom: 1px solid $m-color--grey-light;
    }

    /deep/ .fr-box.fr-basic .fr-element {
        transition: padding $m-transition-duration--l ease, border-color $m-transition-duration--l ease-in-out;
        padding: 0;
        min-height: unset;
        font-weight: $m-font-weight;
        border-left: 1px solid transparent;
        border-right: 1px solid transparent;
    }

    &--animated {
        /deep/ .fr-toolbar {
            transition: margin-top $m-transition-duration--l ease, opacity 0.3s ease;
        }
    }

    &--collapsed {
        // Style overrides when the editor is not focused when there is nothing to display.  Rework this as you wish.
        /deep/ .fr-box.fr-basic .fr-element {
            padding: 0;
            min-height: unset;

            p { margin: 0; }
        }

        /deep/ .fr-box.fr-basic.fr-top .fr-wrapper {
            box-shadow: unset;
        }

        /deep/ .fr-wrapper.show-placeholder .fr-placeholder { display: none; }
    }

    &--focused {
        /deep/ .fr-placeholder {
            padding: 16px 16px 0 16px !important; // Fix placeholder positioning bug.  Magic numbers.
        }

        /deep/ .fr-box.fr-basic .fr-element {
            padding: $m-spacing;
            border-left-color: $m-color--grey-light;
            border-right-color: $m-color--grey-light;
        }

        /deep/ .fr-wrapper {
            background-color: white;
        }

        /deep/ .fr-toolbar {
            margin-top: 0;
            padding: 0;
            opacity: 1;

            &::before,
            &::after {
                .m--has-error & {
                    background-color: $m-color--error;
                }

                .m--is-valid & {
                    background-color: $m-color--success;
                }
            }
        }
    }

    /deep/ .fr-element {
        & > :first-child {
            margin-top: 0;
        }

        & > * {
            min-height: 24px; // magic number
        }

        & > p {
            margin-top: 8px; // magic number
        }

        ul {
            margin-top: $m-margin;
            margin-bottom: 0;

            @include m-bullet-list();
        }

        table {
            @include m-table();
        }
    }
}

